[Refactor] 통계 데이터 응답 스펙을 수정한다 (#79)
* refactor: 사용자 행사별 통계 응답 스펙 수정

* refactor: 트렌드 통계 응답 스펙 수정

* refactor: 트렌드 평균 통계 double -> BigDecimal