@@ -9,12 +9,9 @@ import ac.dnd.mour.server.heart.domain.repository.query.spec.StatisticsStandard;
 import ac.dnd.mour.server.statistics.application.usecase.query.GetPersonalHeartStatistics;
 import ac.dnd.mour.server.statistics.application.usecase.query.response.PersonalHeartStatisticsResponse;
 import ac.dnd.mour.server.statistics.application.usecase.query.response.PersonalHeartSummary;
-import ac.dnd.mour.server.statistics.domain.model.StatisticsCategory;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @UseCase
 @RequiredArgsConstructor
@@ -25,7 +22,7 @@ public class GetPersonalHeartStatisticsUseCase {
     public PersonalHeartStatisticsResponse invoke(final GetPersonalHeartStatistics query) {
         final List<PersonalHeartHistory> giveHistories = heartStatisticsRepository.fetchPersonalHeartHistories(createGiveOrTakeCondition(query, true));
         final List<PersonalHeartHistory> takeHistories = heartStatisticsRepository.fetchPersonalHeartHistories(createGiveOrTakeCondition(query, false));
-        return new PersonalHeartStatisticsResponse(groupingByEvent(giveHistories), groupingByEvent(takeHistories));
+        return new PersonalHeartStatisticsResponse(toSummary(giveHistories), toSummary(takeHistories));
     }
 
     private PersonalHeartStatisticsCondition createGiveOrTakeCondition(final GetPersonalHeartStatistics query, final boolean give) {
@@ -38,39 +35,53 @@ public class GetPersonalHeartStatisticsUseCase {
         );
     }
 
-    private List<Map<String, List<PersonalHeartSummary>>> groupingByEvent(final List<PersonalHeartHistory> histories) {
-        final List<Map<String, List<PersonalHeartSummary>>> result = histories.stream()
-                .collect(Collectors.groupingBy(
-                        it -> isSpecialEvent(it.event()) ? it.event() : "기타",
-                        Collectors.mapping(
-                                it -> new PersonalHeartSummary(
-                                        it.relationName(),
-                                        it.groupName(),
-                                        it.money(),
-                                        it.day(),
-                                        it.memo()
-                                ),
-                                Collectors.toList()
-                        )
+    private List<PersonalHeartSummary> toSummary(final List<PersonalHeartHistory> histories) {
+        return histories.stream()
+                .map(it -> new PersonalHeartSummary(
+                        it.event(),
+                        it.relationName(),
+                        it.groupName(),
+                        it.money(),
+                        it.day(),
+                        it.memo()
                 ))
-                .entrySet().stream()
-                .map(entry -> Map.of(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
-        applyAllEvents(result);
-        return result;
+                .toList();
     }
 
-    private boolean isSpecialEvent(final String event) {
-        return StatisticsCategory.isSpecialEvent(event);
-    }
-
-    private void applyAllEvents(final List<Map<String, List<PersonalHeartSummary>>> result) {
-        final List<String> totalEvents = StatisticsCategory.getTotalEvents();
-        for (final String event : totalEvents) {
-            final boolean eventExists = result.stream().anyMatch(map -> map.containsKey(event));
-            if (!eventExists) {
-                result.add(Map.of(event, List.of()));
-            }
-        }
-    }
+    // FIXME: 데이터 핸들링 요구사항 변경될 수도 있기 때문에 주석으로 유지
+//    private List<PersonalHeartSummary> groupingByEvent(final List<PersonalHeartHistory> histories) {
+//        final List<Map<String, List<PersonalHeartSummary>>> result = histories.stream()
+//                .collect(Collectors.groupingBy(
+//                        it -> isSpecialEvent(it.event()) ? it.event() : "기타",
+//                        Collectors.mapping(
+//                                it -> new PersonalHeartSummary(
+//                                        it.relationName(),
+//                                        it.groupName(),
+//                                        it.money(),
+//                                        it.day(),
+//                                        it.memo()
+//                                ),
+//                                Collectors.toList()
+//                        )
+//                ))
+//                .entrySet().stream()
+//                .map(entry -> Map.of(entry.getKey(), entry.getValue()))
+//                .collect(Collectors.toList());
+//        applyAllEvents(result);
+//        return result;
+//    }
+//
+//    private boolean isSpecialEvent(final String event) {
+//        return StatisticsCategory.isSpecialEvent(event);
+//    }
+//
+//    private void applyAllEvents(final List<Map<String, List<PersonalHeartSummary>>> result) {
+//        final List<String> totalEvents = StatisticsCategory.getTotalEvents();
+//        for (final String event : totalEvents) {
+//            final boolean eventExists = result.stream().anyMatch(map -> map.containsKey(event));
+//            if (!eventExists) {
+//                result.add(Map.of(event, List.of()));
+//            }
+//        }
+//    }
 }
